--- a/trainers.html
+++ b/trainers.html
@@ -42,7 +42,7 @@
 									<div class="card h-100">
 										<img src="images/trainer1.jpg" class="card-img-top" alt="Yoga Trainer">
 											<div class="card-body">
-												<h5 class="card-title">Aisha Rahman</h5>
+												<h5 class="card-title">Stefan Lee</h5>
 												<p class="card-text">Certified Yoga instructor with 5+ years experience. Specializes in beginner & stress-relief yoga.</p>
 											</div>
 										</div>
@@ -51,7 +51,7 @@
 										<div class="card h-100">
 											<img src="images/trainer2.jpg" class="card-img-top" alt="Zumba Trainer">
 												<div class="card-body">
-													<h5 class="card-title">John Lee</h5>
+													<h5 class="card-title">Sara Johnson</h5>
 													<p class="card-text">Zumba & dance fitness coach. High-energy cardio classes perfect for all levels.</p>
 												</div>
 											</div>
@@ -60,7 +60,7 @@
 											<div class="card h-100">
 												<img src="images/trainer3.jpg" class="card-img-top" alt="Personal Trainer">
 													<div class="card-body">
-														<h5 class="card-title">Siti Nur</h5>
+														<h5 class="card-title">Mark Megatron</h5>
 														<p class="card-text">Personal trainer specialized in muscle toning, weight loss & HIIT programs.</p>
 													</div>
 												</div>
@@ -74,4 +74,5 @@ function toggleDarkMode(){
 }
 </script>
 								</body>
+
 							</html>
