--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 											<a class="nav-link" href="schedule.html">Schedule</a>
 										</li>
 										<li class="nav-item">
+											<a class="nav-link" href="contact.html">Contact</a>
+										</li>
+										<li class="nav-item">
 											<a class="nav-link" href="register.html">Register</a>
 										</li>
 										<button class="btn btn-light ms-3" onclick="toggleDarkMode()">🌙</button>
@@ -82,5 +85,6 @@ function toggleDarkMode(){
   document.body.classList.toggle("dark-mode");
 }
 </script>
+<script src="js/script.js"></script>
 								</body>
 							</html>
