--- a/schedule.html
+++ b/schedule.html
@@ -19,13 +19,13 @@
 								<div class="collapse navbar-collapse" id="nav">
 									<ul class="navbar-nav ms-auto">
 										<li class="nav-item">
-											<a class="nav-link" href="index.html">Home</a>
-										</li>
-										<li class="nav-item">
 											<a class="nav-link" href="trainers.html">Trainers</a>
 										</li>
 										<li class="nav-item">
-											<a class="nav-link active" href="schedule.html">Schedule</a>
+											<a class="nav-link" href="schedule.html">Schedule</a>
+										</li>
+										<li class="nav-item">
+											<a class="nav-link" href="contact.html">Contact</a>
 										</li>
 										<li class="nav-item">
 											<a class="nav-link" href="register.html">Register</a>
@@ -86,5 +86,6 @@ function toggleDarkMode(){
   document.body.classList.toggle("dark-mode");
 }
 </script>
+<script src="js/script.js"></script>
 					</body>
 				</html>
