--- a/contact.html
+++ b/contact.html
@@ -42,5 +42,6 @@ function toggleDarkMode(){
   document.body.classList.toggle("dark-mode");
 }
 </script>
+<script src="js/script.js"></script>
 					</body>
 				</html>
