--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 							</div>
 							<div class="mb-3">
 								<label class="form-label">Message</label>
-								<textarea class="form-control" rows="4" required>< textarea>
+								<textarea class="form-control" rows="4" required></textarea>
 							</div>
 							<button class="btn btn-primary w-100" type="submit">Send</button>
 						</form>
@@ -36,12 +36,7 @@
 							<p>123 Fitness Street, Kuala Lumpur, Malaysia</p>
 							<iframe src="https://www.google.com/maps?q=kuala+lumpur&output=embed" width="100%" height="250" style="border:0;" loading="lazy"/>
 						</div>
-						<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"/>
-						<script>
-function toggleDarkMode(){
-  document.body.classList.toggle("dark-mode");
-}
-</script>
+						<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/script.js"></script>
 					</body>
 				</html>
