--- a/register.html
+++ b/register.html
@@ -59,12 +59,8 @@
 							</div>
 						</div>
 					</div>
-					<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"/>
+					<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 					<script>
-function toggleDarkMode(){
-  document.body.classList.toggle("dark-mode");
-}
-
 document.getElementById("regForm").addEventListener("submit", function(e) {
   e.preventDefault();
   let form = e.target;
@@ -86,11 +82,6 @@ document.getElementById("regForm").addEventListener("submit", function(e) {
     form.querySelectorAll('.is-valid').forEach(el => el.classList.remove('is-valid'));
   }
 });
-</script>
-					<script>
-function toggleDarkMode(){
-  document.body.classList.toggle("dark-mode");
-}
 </script>
 <script src="js/script.js"></script>
 				</body>
