--- a/trainers.html
+++ b/trainers.html
@@ -67,12 +67,7 @@
 											</div>
 										</div>
 									</div>
-									<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"/>
-									<script>
-function toggleDarkMode(){
-  document.body.classList.toggle("dark-mode");
-}
-</script>
+									<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/script.js"></script>
 								</body>
 							</html>
