--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 					<div class="container my-4">
 						<h1>Contact Us</h1>
 						<p>Have questions? Contact us anytime!</p>
-						<form class="shadow p-4 rounded bg-white">
+						<form class="shadow p-4 rounded form-box">
 							<div class="mb-3">
 								<label class="form-label">Your Name</label>
 								<input type="text" class="form-control" required>
