--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 						<hr class="my-4">
 							<h4>Location</h4>
 							<p>123 Fitness Street, Kuala Lumpur, Malaysia</p>
-							<iframe src="https://www.google.com/maps?q=kuala+lumpur&output=embed" width="100%" height="250" style="border:0;" loading="lazy"/>
+							<iframe src="https://www.google.com/maps?q=kuala+lumpur&output=embed" width="100%" height="250" style="border:0;" loading="lazy"></iframe>
 						</div>
 						<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/script.js"></script>
