--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
 					</div>
 					<div class="container my-4">
 						<h1 class="mb-4">Trial Class Registration</h1>
-						<form id="regForm" novalidate class="shadow p-4 rounded bg-white">
+						<form id="regForm" novalidate class="shadow p-4 rounded form-box">
 							<div class="mb-3">
 								<label class="form-label">Full Name</label>
 								<input type="text" id="fullName" class="form-control" required>
