--- a/trainers.html
+++ b/trainers.html
@@ -14,7 +14,7 @@
 							<a class="navbar-brand d-flex align-items-center" href="index.html">
 								<img src="images/logo.png" height="35" class="me-2" alt="FitLocal Logo">FitLocal Studio</a>
 								<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
-									<span class="navbar-toggler-icon"/>
+									<span class="navbar-toggler-icon"></span>
 								</button>
 								<div class="collapse navbar-collapse" id="nav">
 									<ul class="navbar-nav ms-auto">
@@ -40,27 +40,27 @@
 							<div class="row g-4">
 								<div class="col-md-4">
 									<div class="card h-100">
-										<img src="images/trainer1.jpg" class="card-img-top" alt="Yoga Trainer">
+										<img src="images/trainer1.jpg" class="card-img-top trainer-img" alt="Yoga Trainer">
 											<div class="card-body">
-												<h5 class="card-title">Aisha Rahman</h5>
+												<h5 class="card-title">Stefan Lee</h5>
 												<p class="card-text">Certified Yoga instructor with 5+ years experience. Specializes in beginner & stress-relief yoga.</p>
 											</div>
 										</div>
 									</div>
 									<div class="col-md-4">
 										<div class="card h-100">
-											<img src="images/trainer2.jpg" class="card-img-top" alt="Zumba Trainer">
+											<img src="images/trainer2.jpg" class="card-img-top trainer-img" alt="Zumba Trainer">
 												<div class="card-body">
-													<h5 class="card-title">John Lee</h5>
+													<h5 class="card-title">Sarah Johnson</h5>
 													<p class="card-text">Zumba & dance fitness coach. High-energy cardio classes perfect for all levels.</p>
 												</div>
 											</div>
 										</div>
 										<div class="col-md-4">
 											<div class="card h-100">
-												<img src="images/trainer3.jpg" class="card-img-top" alt="Personal Trainer">
+												<img src="images/trainer3.jpg" class="card-img-top trainer-img" alt="Personal Trainer">
 													<div class="card-body">
-														<h5 class="card-title">Siti Nur</h5>
+														<h5 class="card-title">Long Chea</h5>
 														<p class="card-text">Personal trainer specialized in muscle toning, weight loss & HIIT programs.</p>
 													</div>
 												</div>
