--- a/schedule.html
+++ b/schedule.html
@@ -14,7 +14,7 @@
 							<a class="navbar-brand d-flex align-items-center" href="index.html">
 								<img src="images/logo.png" height="35" class="me-2" alt="FitLocal Logo">FitLocal Studio</a>
 								<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
-									<span class="navbar-toggler-icon"/>
+									<span class="navbar-toggler-icon"></span>
 								</button>
 								<div class="collapse navbar-collapse" id="nav">
 									<ul class="navbar-nav ms-auto">
