--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
 									</main>
 									<footer class="bg-light py-3">
 										<div class="container text-center">
-											<small>Images: open-source / credited in report. &middot; © FitLocal Studio</small>
+											<small>© FitLocal Studio</small>
 										</div>
 									</footer>
 									<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/script.js"></script>
 								</body>
+
 							</html>
